--- a/Final/src/main/webapp/resources/css/common/scheduleDetail.css
+++ b/Final/src/main/webapp/resources/css/common/scheduleDetail.css
@@ -215,6 +215,10 @@
 	width: 100%;
 	height: 40px;
 	margin-top: 3px;
+	border-radius: 10px;
+	text-align:center;
+	line-height: 30px;
+	font-size: 12px;
 }
 
 .day2 {
@@ -222,6 +226,10 @@
 	width: 100%;
 	height: 40px;
 	margin-top: 3px;
+	border-radius: 10px;
+	text-align:center;
+	line-height: 30px;
+	font-size: 12px;
 }
 
 .day3 {
@@ -236,6 +244,10 @@
 	width: 100%;
 	height: 40px;
 	margin-top: 3px;
+	border-radius: 10px;
+	text-align:center;
+	line-height: 30px;
+	font-size: 12px;
 }
 
 .day5 {
@@ -243,6 +255,10 @@
 	width: 100%;
 	height: 40px;
 	margin-top: 3px;
+	border-radius: 10px;
+	text-align:center;
+	line-height: 30px;
+	font-size: 12px;
 }
 
 .day6 {
@@ -250,6 +266,10 @@
 	width: 100%;
 	height: 40px;
 	margin-top: 3px;
+	border-radius: 10px;
+	text-align:center;
+	line-height: 30px;
+	font-size: 12px;
 }
 
 .day7 {
@@ -257,11 +277,15 @@
 	width: 100%;
 	height: 40px;
 	margin-top: 3px;
+	border-radius: 10px;
+	text-align:center;
+	line-height: 30px;
+	font-size: 12px;
 }
 
 .day {
-	width: 40px;
-	height: 20px;
+	width: 50px;
+	height: 30px;
 	color: #fff;
 	background: #F18101;
 	border: 1px solid transparent;
